xrdpman1dir=$(mandir)/man1
xrdpman1_DATA = \
  xrdp-logoff.1 \
  xrdp-disconnect.1 \
  startapp.1 \
  xrdp-genkeymap.1 \
  xrdp-keygen.1 \
  xrdp-sesadmin.1 \
  xrdp-sessvc.1 \
  xrdp-sestest.1 \
  vchannel_rdpdr.1 \
  rdpdr_printer.1 \
  rdpdr_disk.1 \
  seamlessrdpshell.1 \
  XHook.1

xrdpman5dir=$(mandir)/man5
xrdpman5_DATA = \
  sesman.ini.5 \
  xrdp.ini.5

xrdpman8dir=$(mandir)/man8
xrdpman8_DATA = \
  xrdp.8 \
  xrdp-sesman.8 \
  xrdp-sesrun.8

EXTRA_DIST = \
  $(xrdpman1_DATA) \
  $(xrdpman5_DATA) \
  $(xrdpman8_DATA)
